2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50491
	* semantics.c (potential_constant_expression_1): Handle USING_DECL.

2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50371
	* pt.c (invalid_nontype_parm_type_p): Handle NULLPTR_TYPE.

2011-09-22  Jonathan Wakely  <jwakely.gcc@gmail.com>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50344
	* friend.c (make_friend_class): cv-qualification is ok in a
	friend declaration.

2011-09-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50454
	* decl.c (grokdeclarator): Consistently handle both __int128
	and unsigned __int128 with -pedantic; suppress diagnostic in
	system headers.

2011-09-20  Jason Merrill  <jason@redhat.com>

	* cp-tree.h (DECL_TEMPLOID_INSTANTIATION): New.
	(DECL_GENERATED_P): New.
	* class.c (finalize_literal_type_property): Use them.
	* semantics.c (is_instantiation_of_constexpr): Likewise.
	(register_constexpr_fundef): Likewise.

	* call.c (convert_default_arg): Avoid redundant copy.
	* tree.c (bot_manip): Copy everything.

2011-09-20 Roberto Agostino Vitillo <ravitillo@lbl.gov>

	* call.c (build_new_method_call_1): Use non-virtual lookup
	for final virtual functions.

2011-09-16  Jason Merrill  <jason@redhat.com>

	PR c++/50424
	* call.c (set_flags_from_callee): Split out from build_call_a.
	* cp-tree.h: Declare it.
	* tree.c (bot_manip): Call it.

2011-09-15  Jason Merrill  <jason@redhat.com>

	PR c++/50365
	* parser.c (cp_parser_late_return_type_opt): Check quals parameter
	for clearing current_class_ptr, too.

2011-09-14   Diego Novillo  <dnovillo@google.com>

	* name-lookup.c (lookup_arg_dependent): Use conditional
	timevars.
	* decl.c (xref_tag): Likewise.

2011-09-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50391
	* pt.c (regenerate_decl_from_template): Don't pass an error_mark_node
	to build_exception_variant.

2011-09-13  Dodji Seketeli  <dodji@redhat.com>

	PR c++/48320
	* pt.c (template_parameter_pack_p): Support TEMPLATE_PARM_INDEX