@@ -1,3 +1,8 @@
+2011-09-23  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50258
+	* g++.dg/cpp0x/constexpr-static8.C: New.
+
 2011-09-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.target/i386/avxfp-1.c: New test.
