@@ -1,3 +1,10 @@
+2011-09-23  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50258
+	* decl.c (check_static_variable_definition): Allow in-class
+	initialization of static data member of non-integral type in
+	permissive mode.
+
 2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/50491
